blocks/photo-grid.css
.photo-grid {
    margin: 118px 48px 0;
  }
    
.photo-grid__list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
  grid-gap: 16px;
  list-style-type: none;
  box-sizing: border-box;
  padding: 0%;
  margin: 0;
}

.photo-grid__item {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
    
@media screen and (max-width: 768px) {
  .photo-grid {
    margin: 90px 24px 0;
  }
  .photo-grid__list {
    max-width: 720px;
  }
}
    
@media screen and (max-width: 320px) {
  .photo-grid {
    margin: 90px 16px 0;
  }
  .photo-grid__list {
    gap: 12px;
  }
}

